<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/loginback"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_welcome_back"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="10dp"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="17sp"
        android:layout_marginTop="3dp"/>    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lgnlayoutphoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/baseline_local_phone_24"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="#B4000000"
            app:boxStrokeWidth="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lgnedtphoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lgnlayoutpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="#B4000000"
            app:boxStrokeWidth="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lgnedtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:drawableLeft="@drawable/baseline_login_24"
                android:layout_gravity="center"
                android:backgroundTint="#3AAAB8"/>

        <TextView
            android:id="@+id/txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_sign_up"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>




</LinearLayout>